[gd_scene load_steps=13 format=4 uid="uid://t81mvpjh4g0i"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_7rkkl"]
[ext_resource type="Texture2D" uid="uid://dmmj3ou7ru1fa" path="res://assets/tiles/tilesheet.png" id="2_3tlab"]
[ext_resource type="Script" path="res://scripts/screen_wrap_triggers.gd" id="2_hr32a"]
[ext_resource type="PackedScene" uid="uid://cmcgj8vwugx0i" path="res://scenes/player_controller.tscn" id="2_jduqa"]
[ext_resource type="PackedScene" uid="uid://7a1f4lx35t14" path="res://scenes/enemy_controller.tscn" id="4_oqkom"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lek8v"]
size = Vector2(192, 160)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4ttdb"]
size = Vector2(192, 192)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qbow1"]
a = Vector2(0, -80)
b = Vector2(0, 80)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_b32cw"]
a = Vector2(-96, 0)
b = Vector2(96, 0)

[sub_resource type="LabelSettings" id="LabelSettings_76ula"]
font_color = Color(1, 1, 1, 0.607843)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ktjqj"]
resource_name = "tiles"
texture = ExtResource("2_3tlab")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_8rtbq"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 2
sources/0 = SubResource("TileSetAtlasSource_ktjqj")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_7rkkl")

[node name="ScreenWrapTriggers" type="Node2D" parent="."]
script = ExtResource("2_hr32a")

[node name="LeftEntrance" type="Area2D" parent="ScreenWrapTriggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/LeftEntrance"]
position = Vector2(-144, 176)
shape = SubResource("RectangleShape2D_lek8v")

[node name="RightEntrance" type="Area2D" parent="ScreenWrapTriggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/RightEntrance"]
position = Vector2(784, 176)
shape = SubResource("RectangleShape2D_lek8v")

[node name="TopEntrance" type="Area2D" parent="ScreenWrapTriggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/TopEntrance"]
position = Vector2(320, -144)
shape = SubResource("RectangleShape2D_4ttdb")

[node name="BottomEntrance" type="Area2D" parent="ScreenWrapTriggers"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/BottomEntrance"]
position = Vector2(320, 496)
shape = SubResource("RectangleShape2D_4ttdb")

[node name="LeftExit" type="Area2D" parent="ScreenWrapTriggers"]
position = Vector2(-16, 176)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/LeftExit"]
shape = SubResource("SegmentShape2D_qbow1")
debug_color = Color(2.40654e-07, 0.650498, 0.0886246, 0.42)

[node name="RightExit" type="Area2D" parent="ScreenWrapTriggers"]
position = Vector2(656, 176)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/RightExit"]
shape = SubResource("SegmentShape2D_qbow1")
debug_color = Color(2.40654e-07, 0.650498, 0.0886246, 0.42)

[node name="TopExit" type="Area2D" parent="ScreenWrapTriggers"]
position = Vector2(320, -16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/TopExit"]
shape = SubResource("SegmentShape2D_b32cw")
debug_color = Color(2.40654e-07, 0.650498, 0.0886246, 0.42)

[node name="BottomExit" type="Area2D" parent="ScreenWrapTriggers"]
position = Vector2(320, 368)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScreenWrapTriggers/BottomExit"]
shape = SubResource("SegmentShape2D_b32cw")
debug_color = Color(2.40654e-07, 0.650498, 0.0886246, 0.42)

[node name="UI" type="CanvasLayer" parent="."]

[node name="LevelController" type="LevelController" parent="."]

[node name="Camera" type="Camera2D" parent="."]
anchor_mode = 0

[node name="PlayerController" parent="." instance=ExtResource("2_jduqa")]
maxGroundSpeed = 180
groundAccel = 12.0
groundDecel = 12.0
gravity = 1275.0
maxAirSpeed = 300
fallSpeed = nan
maxFallSpeed = 2250
trueMaxSpeed = 2250
smallBlastStrength = 750
largeBlastStrength = 1950
maxSmallBlastSpeed = 300
maxLargeBlastSpeed = 1200
timeSlowFactor = 6.0
unique_name_in_owner = true
position = Vector2(112, 304)

[node name="TutorialText" type="Label" parent="."]
offset_left = 192.0
offset_top = 64.0
offset_right = 448.0
offset_bottom = 191.0
text = "Walk: A/D
Small Blast: M1
Large Blast: M2
Slow Motion: Space
Return to Menu: Esc"
label_settings = SubResource("LabelSettings_76ula")
horizontal_alignment = 1

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAGAAoAAAAAAAAAAAANAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAARAAoAAAAAAAAAAAASAAoAAAAAAAAAAAATAAoAAAAAAAAAAAATAAAAAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAAwAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA4AAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAAGAP//AAAAAAAAAAAGAP7/AAAAAAAAAAAGAP3/AAAAAAAAAAAGAPz/AAAAAAAAAAANAP//AAAAAAAAAAANAP7/AAAAAAAAAAANAP3/AAAAAAAAAAANAPz/AAAAAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAAGAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAVAAgAAAAAAAAAAAAWAAgAAAAAAAAAAAAXAAgAAAAAAAAAAAAUAAIAAAAAAAAAAAAVAAIAAAAAAAAAAAAWAAIAAAAAAAAAAAAXAAIAAAAAAAAAAAD8/wgAAAAAAAAAAAD9/wgAAAAAAAAAAAD+/wgAAAAAAAAAAAD//wgAAAAAAAAAAAD8/wIAAAAAAAAAAAD9/wIAAAAAAAAAAAD+/wIAAAAAAAAAAAD//wIAAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAAGAA8AAAAAAAAAAAAGABAAAAAAAAAAAAAGABEAAAAAAAAAAAAGABIAAAAAAAAAAAAYAAgAAAAAAAAAAAAZAAgAAAAAAAAAAAAaAAgAAAAAAAAAAAAbAAgAAAAAAAAAAAAYAAIAAAAAAAAAAAAZAAIAAAAAAAAAAAAaAAIAAAAAAAAAAAAbAAIAAAAAAAAAAAANAPv/AAAAAAAAAAANAPr/AAAAAAAAAAANAPn/AAAAAAAAAAANAPj/AAAAAAAAAAAGAPv/AAAAAAAAAAAGAPr/AAAAAAAAAAAGAPn/AAAAAAAAAAAGAPj/AAAAAAAAAAD7/wIAAAAAAAAAAAD6/wIAAAAAAAAAAAD5/wIAAAAAAAAAAAD4/wIAAAAAAAAAAAD7/wgAAAAAAAAAAAD6/wgAAAAAAAAAAAD5/wgAAAAAAAAAAAD4/wgAAAAAAAAAAAA=")
tile_set = SubResource("TileSet_8rtbq")

[node name="Enemies" type="Node2D" parent="."]

[node name="EnemyController" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(112, 240)

[node name="EnemyController2" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(224, 160)

[node name="EnemyController3" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(448, 184)

[node name="EnemyController4" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(560, 96)

[node name="EnemyController5" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(168, 88)

[node name="EnemyController6" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(552, 296)

[node name="EnemyController7" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(320, 336)

[node name="EnemyController8" parent="Enemies" instance=ExtResource("4_oqkom")]
position = Vector2(368, 64)

[connection signal="body_entered" from="ScreenWrapTriggers/LeftEntrance" to="ScreenWrapTriggers" method="_on_left_entrance_body_entered"]
[connection signal="body_entered" from="ScreenWrapTriggers/RightEntrance" to="ScreenWrapTriggers" method="_on_right_entrance_body_entered"]
[connection signal="body_entered" from="ScreenWrapTriggers/TopEntrance" to="ScreenWrapTriggers" method="_on_top_entrance_body_entered"]
[connection signal="body_entered" from="ScreenWrapTriggers/BottomEntrance" to="ScreenWrapTriggers" method="_on_bottom_entrance_body_entered"]
